# tutorial-llm-agents

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  main.py  oop.ipynb  pyproject.toml  vector.py
.cursor/rules/: rules.mdc
.github/workflows/workflows/: ci.yaml
chroma_db/: chroma.sqlite3
notebooks/: documents.ipynb
scripts/: restaurants.py
src/: config.py  vector.py
src/examples/: example_text.py  utils.py
